--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -1,8 +1,8 @@
 <h1>id:<%=@task.id %>のメッセージ詳細ページ</h1>
 
-<p>
-    <%= @task.content %>
-</p>
+
+<p><%= @task.status%></p>
+<p><%= @task.content %></p>
 
 
 <%= link_to '一覧に戻る', tasks_path %>
