--- a/app/views/tasks/new.html.erb
+++ b/app/views/tasks/new.html.erb
@@ -1,5 +1,8 @@
+<div class="row">
+    <div class="col-xs-12 col-sm-offset-2 col-sm-8 col-lg-offset-3 col-lg-6">
 <h1>タスク作成ページ</h1>
+    </div>
+</div>
 
 <%= render 'form' , task: @task %>
 
-<%= link_to 'タスク一覧' , tasks_path %>
