--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -1,10 +1,27 @@
+
+
 <h1>id:<%=@task.id %>のメッセージ詳細ページ</h1>
 
+<table class="table table-bordered">
+    <tr>
+        <th class="col-xs-offset-1 col-xs-3">id</th>
+        <td class="col-xs-7"><%=@task.id%></td>
+    </tr>
+    <tr>
+        <th>ステータス</th>
+        <td><%= @task.status%></td>
+    </tr>
+    <tr>
+        <th>タスク</th>
+        <td><%= @task.content %></td>
+    </tr>
+</table>
 
-<p><%= @task.status%></p>
-<p><%= @task.content %></p>
 
 
-<%= link_to '一覧に戻る', tasks_path %>
-<%= link_to '編集する' , edit_task_path(@task) %>
-<%= link_to '削除する' , @task , method: :delete, data: {confirm: '本当によろしいですか？'} %>
+
+
+
+<%= link_to '一覧に戻る', tasks_path ,class: "btn btn-default" %>
+<%= link_to '編集する' , edit_task_path(@task), class:"btn btn-primary"%>
+<%= link_to '削除する' , @task , method: :delete, data: {confirm: '本当によろしいですか？'}  ,class:"btn btn-danger"%>
