--- a/app/views/tasks/edit.html.erb
+++ b/app/views/tasks/edit.html.erb
@@ -2,7 +2,7 @@
     <div class="col-xs-12 col-sm-offset-2 col-sm-8 col-lg-offset-3 col-lg-6">
 <h1>id: 
 <%= @task.id %>
- のメッセージ編集ページ</h1>
+ のタスク編集ページ</h1>
     </div>
 </div>
 
