--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -1,32 +1,15 @@
-
-<h1>タスク一覧</h1>
-
-<%if @task.any?%>
-
-<table class="table table-striped">
-    <thead>
-        <tr>
-            <th>id</th>
-            <th>ステータス</th>
-            <th>タスク</th>
-        </tr>
-    </thead>
-    <tbody>
-       <% @task.each do |task|%> 
-        <tr>
-            <td><%= link_to task.id ,task%></td>
-            <td><%= task.status %></td>
-            <td><%= task.content %></td>
-        </tr>
-        <% end %>
-    </tbody>
-</table>
-<div>
-  <%= paginate @task %>   
+<% if logged_in?%>
+<p>ログイン完了ユーザー：<%= current_user.name %></p>
+  <%=render 'tasklist',task: @task%> 
+<% else %>
+<div class="center jumbotron">
+  <div class="text-center">
+    <h1>Welcome to the Tasklist</h1>
+    <%= link_to 'Sign up now!', signup_path, class: 'btn btn-lg btn-primary' %>
+  </div>
 </div>
-
 <% end %>
 
 
-<%=link_to '新規メッセージの投稿' , new_task_path ,class: "btn btn-primary"%>
-    
+
+
