--- a/app/views/tasks/edit.html.erb
+++ b/app/views/tasks/edit.html.erb
@@ -1,3 +1,4 @@
+<% if logged_in?%>
 <div class="row">
     <div class="col-xs-12 col-sm-offset-2 col-sm-8 col-lg-offset-3 col-lg-6">
 <h1>id: 
@@ -7,5 +8,5 @@
 </div>
 
 <%= render 'form', task: @task %>
-    
+ <% end %>  
 
