--- a/app/views/tasks/new.html.erb
+++ b/app/views/tasks/new.html.erb
@@ -1,3 +1,4 @@
+<% if logged_in?%>
 <div class="row">
     <div class="col-xs-12 col-sm-offset-2 col-sm-8 col-lg-offset-3 col-lg-6">
 <h1>タスク作成ページ</h1>
@@ -5,4 +6,5 @@
 </div>
 
 <%= render 'form' , task: @task %>
+<% end %>
 
