--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -1,4 +1,4 @@
-
+<% if logged_in?%>
 
 <h1>id:<%=@task.id %>のタスク詳細ページ</h1>
 
@@ -16,7 +16,7 @@
         <td><%= @task.content %></td>
     </tr>
 </table>
-
+<%end%>
 
 
 
